2009-02-17 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-object-api.h:
	* src/api/na-object-item.h:
	* src/core/na-object-item.c:
	* src/nact/nact-tree-model-dnd.c:
	* src/nact/nact-tree-model.c: Update NactTreeModel class.

	* src/api/na-core-utils.h:
	* src/api/na-object-api.h:
	* src/api/na-object-profile.h:
	* src/core/na-core-utils.c:
	* src/core/na-object-profile.c:
	* src/io-gconf/nagp-reader.c:
	* src/nact/nact-ibackground-tab.c:
	* src/nact/nact-schemes-list.c: Update schemes list.

	* src/nact/nact-providers-list.c: Update providers list.

	* src/core/na-iprefs.c:
	* src/core/na-iprefs.h:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-export-format.c:
	* src/nact/nact-export-format.h:
	* src/nact/nact-preferences-editor.c:
	* src/nact/nact-preferences.ui: Update NactPreferencesEditor class.

	* src/nact/base-iprefs.c:
	* src/nact/base-iprefs.h:
	* src/nact/nact-main-window.c:
	* src/nact/nact-main-window.h: Update NactMainWindow class.

	* src/core/na-iprefs.c:
	* src/core/na-iprefs.h:
	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h:
	* src/nact/nact-main-toolbar.c: Update toolbar.

	* src/api/na-iio-provider.h:
	* src/core/na-io-provider.c:
	* src/core/na-io-provider.h:
	* src/nact/nact-main-statusbar.c: Update status bar.

	* src/api/na-object-action.h:
	* src/api/na-object-api.h:
	* src/api/na-object-id.h:
	* src/api/na-object-item.h:
	* src/api/na-object-profile.h:
	* src/api/na-object.h:
	* src/core/na-object-action.c:
	* src/core/na-object-id.c:
	* src/core/na-object-item.c:
	* src/core/na-object-profile.c:
	* src/core/na-object.c:
	* src/core/na-pivot.c:
	* src/core/na-pivot.h:
	* src/core/na-updater.c:
	* src/core/na-updater.h:
	* src/nact/nact-export-format.c:
	* src/nact/nact-main-menubar.c: Update menu bar.

	* src/nact/nact-iprefs.c: Update NactIPrefs interface.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c:
	* src/nact/nact-iconditions-tab.c:
	Update NactIConditionsTab interface.
