@@ -1,5 +1,11 @@
 2009-02-17 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/core/Makefile.am:
+	* src/core/na-updater.c:
+	* src/core/na-updater.h:
+	* src/nact/nact-window.c:
+	* src/nact/nact-window.h: Update NactWindow class.
+
 	* src/api/na-object-api.h:
 	* src/api/na-object-item.h:
 	* src/core/na-object-item.c:
